@@ -1,0 +1,2 @@
+etc/fai
+usr/lib/fai
